--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,16 @@
     <link rel="stylesheet" href="href="{{ url_for('static', filename='css/boxicons.min.css') }}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
-    <title>Ludiflex | Login & Registration</title>
+    <title>Server Project 5Team</title>
 </head>
 <body>
  <div class="wrapper">
     <nav class="nav">
         <div class="nav-logo">
-            <p>Code'mmunity</p>
+            <p>Server</p>
         </div>
        
         <div class="nav-button">
-            <button class="btn white-btn" id="loginBtn" onclick="login()">Sign In</button>
             <button class="btn" id="registerBtn" onclick="register()">Sign Up</button>
         </div>
         <div class="nav-menu-btn">
