--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
  <div class="wrapper">
     <nav class="nav">
         <div class="nav-logo">
-            <p>Server</p>
+            <p>Server Project</p>
         </div>
        
         <div class="nav-button">
