--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,10 +8,18 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background: url("images/1.jpg");
+
+    background-image: url("C:/Users/user/OneDrive/바탕 화면/learn/pic1.jpg"); /* 배경 이미지 경로 */
+    background-position: center; 
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    height: 100vh;
+    margin: 0; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     overflow: hidden;
 }
 .wrapper{
@@ -21,6 +29,7 @@ body{
     min-height: 110vh;
     background: rgba(39, 39, 39, 0.4);
 }
+
 .nav{
     position: fixed;
     top: 0;
@@ -32,11 +41,47 @@ body{
     background: linear-gradient(rgba(39,39,39, 0.6), transparent);
     z-index: 100;
 }
-.nav-logo p{
+.nav-logo{
     color: white;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 600;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.wrapper2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 110vh;
+    background: rgba(39, 39, 39, 0.4);
+    flex-direction: column;
+}
+
+.nav2 {
+    position: fixed;
+    top: 30%;
+    transform: translateY(-50%);
+    display: flex;
+    width: 100%;
+    height: 100px;
+    z-index: 100;
+    color: white;
+    padding-left: 120px;
+}
+
+.nav2-logo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;;
+    justify-content: center;
+    font-size: 60px; 
+    font-weight: 600;
+    color: white;
+}
+
 .nav-menu ul{
     display: flex;
 }
@@ -221,5 +266,22 @@ header{
     }
     .nav-menu-btn i:hover{
         background: rgba(255, 255, 255, 0.15);
+    }
+}
+@media only screen and (max-width: 540px) {
+    .wrapper{
+        min-height: 100vh;
+    }
+    .form-box{
+        width: 100%;
+        height: 500px;
+    }
+    .register-container, .login-container{
+        width: 100%;
+        padding: 0 20px;
+    }
+    .register-container .two-forms{
+        flex-direction: column;
+        gap: 0;
     }
 }
