--- a/templates/index.html
+++ b/templates/index.html
@@ -45,5 +45,27 @@
         </nav>
     </div>
 
+    <script>
+
+        // Sign In 버튼 클릭 시 login.html로 이동하는 JavaScript 코드
+        
+        document.getElementById("loginBtn").onclick = function () {
+        
+            window.location.href = "/login";
+        
+        };
+
+        // Sign In 버튼 클릭 시 register.html로 이동하는 JavaScript 코드
+        
+        document.getElementById("registerBtn").onclick = function () {
+        
+        window.location.href = "/register";
+    
+    };
+
+
+    
+    </script>
+
 </body>
 </html>
