--- a/static/css/login.css
+++ b/static/css/login.css
@@ -8,7 +8,7 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background-image: url("C:/Users/user/OneDrive/바탕 화면/learn/pic2.png"); /* 배경 이미지 경로를 실제 파일 경로로 변경해야 합니다. */
+    background-image: url("/static/image/wallpaper.png"); /* 배경 이미지 경로를 실제 파일 경로로 변경해야 합니다. */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
