--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,7 @@
             <div class="nav-menu" id="navMenu">
                 <ul>
                     <li><a href="#" class="link active">Home</a></li>
-                    <li><a href="#" class="link">Post</a></li>
-                    <li><a href="#" class="link">Services</a></li>
+                    <li><a href="/post" class="link">Post</a></li>
                     <li><a href="#" class="link">About</a></li>
                 </ul>
             </div>
@@ -59,7 +58,7 @@
         
         document.getElementById("registerBtn").onclick = function () {
         
-        window.location.href = "/register";
+        window.location.href = "/signup";
     
     };
 
