--- a/templates/question/question_list.html
+++ b/templates/question/question_list.html
@@ -24,7 +24,7 @@
 
             <tr>
 
-                <td>{{ loop.revindex }}</td>
+                <td>{{ question_list.total - ((question_list.page-1) * question_list.per_page) - loop.index0 }}</td>
 
                 <td>
 
