--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="nav-menu" id="navMenu">
                 <ul>
-                    <li><a href="#" class="link active">Home</a></li>
+                    <li><a href="/" class="link active">Home</a></li>
                     <li><a href="/post" class="link">Post</a></li>
                     <li><a href="#" class="link">About</a></li>
                 </ul>
@@ -58,7 +58,7 @@
         
         document.getElementById("registerBtn").onclick = function () {
         
-        window.location.href = "/signup";
+        window.location.href = "/auth/signup";
     
     };
 
