--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -8,8 +8,9 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background-image: url("C:/Users/user/OneDrive/바탕 화면/server/pic2.png"); /* 배경 이미지 경로 */
-    background-position: center; 
+
+    background-image: url("/static/image/wallpaper.png"); /* 배경 이미지 경로를 실제 파일 경로로 변경해야 합니다. */
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -194,4 +195,20 @@ header{
     top: -35px;
     left: 17px;
     color: #fff;
+}
+
+#signupBtn {
+            background-color: rgba(255, 255, 255, 0.3);
+            color: #fff;
+            padding: 7px 12px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 12px;
+        }
+
+#signupBtn:hover {
+
+    background-color: violet;
+
 }
