--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 
                 <li class="nav-item">
 
-                    <a class="nav-link" href="/signup">계정생성</a>
+                    <a class="nav-link" href="{{ url_for('auth.signup') }}">계정생성</a>
 
                 </li>
 
