--- a/templates/question/question_list.html
+++ b/templates/question/question_list.html
@@ -47,6 +47,7 @@
         </tbody>
 
     </table>
+    <a href="{{ url_for('question.create') }}" class="btn btn-primary">질문 등록하기</a>
     <ul class="pagination justify-content-center">
         <!-- 이전페이지 -->
         {% if question_list.has_prev %}
