--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
         
         document.getElementById("loginBtn").onclick = function () {
         
-            window.location.href = "/login";
+            window.location.href = "/auth/login";
         
         };
 
