--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -38,6 +38,12 @@
             </div>
 
             <div class="my-3">
+
+                <a href="javascript:void(0)" data-uri="{{ url_for('question.vote', question_id=question.id) }}"
+                    class="recommend btn btn-sm btn-outline-secondary"> 추천
+                    <span class="badge rounded-pill bg-success">{{ question.voter|length }}</span>
+                </a>
+
             {% if g.user == question.user %}
             <a href="{{ url_for('question.modify', question_id=question.id) }}"
                class="btn btn-sm btn-outline-secondary">수정</a>
@@ -80,6 +86,11 @@
             </div>
 
             <div class="my-3">
+
+                <a href="javascript:void(0)" data-uri="{{ url_for('answer.vote', answer_id=answer.id) }}"
+                    class="recommend btn btn-sm btn-outline-secondary"> 추천
+                    <span class="badge rounded-pill bg-success">{{ answer.voter|length }}</span>
+                </a>
 
                 {% if g.user == answer.user %}
 
@@ -140,5 +151,15 @@ Array.from(delete_elements).forEach(function(element) {
         };
     });
 });
+
+const recommend_elements = document.getElementsByClassName("recommend");
+Array.from(recommend_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        if(confirm("정말로 추천하시겠습니까?")) {
+            location.href = this.dataset.uri;
+        };
+    });
+});
+
 </script>
 {% endblock %}
