--- a/templates/base.html
+++ b/templates/base.html
@@ -34,15 +34,38 @@
 
                 <li class="nav-item">
 
-                    <a class="nav-link" href="{{ url_for('auth.signup') }}">계정생성</a>
+                    <a class="nav-link" href="/">Home</a>
 
                 </li>
 
                 <li class="nav-item">
 
-                    <a class="nav-link" href="{{ url_for('auth.login') }}">로그인</a>
+                    <a class="nav-link" href="{{ url_for('question.post') }}">Post</a>
 
                 </li>
+
+                <li class="nav-item">
+
+                    <a class="nav-link" href="/about">About</a>
+
+                </li>
+
+                <li class="nav-item">
+
+                    <a class="nav-link" href="{{ url_for('auth.login') }}">Sign In</a>
+
+                </li>
+
+                <li class="nav-item">
+
+                    <a class="nav-link" href="{{ url_for('auth.signup') }}">Sign Up</a>
+
+                </li>
+
+
+
+
+
 
             </ul>
 
