--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,12 @@
 
                 <li class="nav-item">
 
+                    <a class="nav-link" href="/admin">Admin</a>
+
+                </li>
+
+                <li class="nav-item">
+
                     <a class="nav-link" href="{{ url_for('auth.login') }}">Sign In</a>
 
                 </li>
