--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<!-- 404 오류페이지 -->
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-12 text-center">
