--- a/templates/base.html
+++ b/templates/base.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-    <title>Ludiflex</title>
+    <title>Code'mmunity</title>
 
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
 
-        <a class="navbar-brand" href="{{ url_for('main.index') }}">Ludiflex</a>
+        <a class="navbar-brand" href="{{ url_for('main.index') }}">Code'mmunity</a>
 
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 
@@ -49,11 +49,6 @@
 
                 </li>
 
-                <li class="nav-item">
-
-                    <a class="nav-link" href="/admin">Admin</a>
-
-                </li>
 
                 <li class="nav-item">
 
