--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/boxicons.min.css') }}">
     <link href="test.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
-    <title>Ludiflex</title>
+    <title>Code'mmunity</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="wrapper">
             <nav class="nav">
                 <div class="nav-logo">
-                    <p>code'mmunity</p> 
+                    <p>Code'mmunity</p>
                 </div>
                 <div class="nav-menu" id="navMenu">
                     <ul>
