--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/boxicons.min.css') }}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
-    <title>Ludiflex | Login & Registration</title>
+    <title>Code'mmunity</title>
+    
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     <div class="wrapper">
         <nav class="nav">
             <div class="nav-logo">
-                <p>code'mmunity</p> 
+                <p>Code'mmunity</p>
             </div>
             <div class="nav-menu" id="navMenu">
                 <ul>
